[package]
name = "cborld-ex"
version = "0.1.0"
edition = "2021"
authors = ["Muntaser Syed <jemsbhai@gmail.com>"]
license = "MIT"
description = "Compact Binary Linked Data with Semantic Reasoning for Constrained IoT Networks"
keywords = ["cbor", "linked-data", "iot", "subjective-logic", "json-ld"]
categories = ["encoding", "embedded", "no-std::no-alloc"]
repository = "https://github.com/jemsbhai/cborld-ex"
readme = "README.md"
rust-version = "1.70"

[features]
default = ["std"]
std = ["alloc", "dep:ciborium"]
alloc = []
# Feature hierarchy:
#   std (default) → alloc + ciborium
#                   Enables: codec module (full CBOR encode/decode pipeline)
#   alloc         → heap allocation (Vec, String)
#                   Enables: temporal module (ExtensionBlock with Vec<Trigger>)
#   bare no_std   → no heap, no allocator
#                   Enables: bitpack, header, opinion, annotation
#                   This is the core wire format for constrained Tier 1 devices.
#
# Usage:
#   [dependencies]
#   cborld-ex = "0.1"                                    # full std (default)
#   cborld-ex = { version = "0.1", features = ["alloc"], default-features = false }  # no_std + alloc
#   cborld-ex = { version = "0.1", default-features = false }                        # bare no_std

[dependencies]
ciborium = { version = "0.2", optional = true }
libm = "0.2"  # Pure-Rust float math for no_std (log2, powf, round). Tiny, zero deps.

[dev-dependencies]

[lib]
name = "cborld_ex"
path = "src/lib.rs"

# Benchmarks added in later phase
# [[bench]]
# name = "encode_decode"
# harness = false
